# secure-aggregation

./: MODULE.bazel
.github/workflows/: presubmit.yml
bazel/: rust_cxx_bridge.bzl
shell_wrapper/: BUILD  kahe.cc  kahe.h  kahe.rs  kahe_test.cc  kahe_test.rs  shell_serialization.cc  shell_serialization.h  shell_serialization.rs  shell_serialization_test.cc  shell_types.cc  shell_types.h  shell_types_test.cc  single_thread_hkdf.h
willow/benches/: BUILD  shell_benchmarks.rs
willow/proto/shell/: BUILD  parameters.proto  parameters_proto_utils.rs
willow/proto/willow/: BUILD  decryptor.proto  input_spec.proto  key.proto
willow/src/input_encoding/: BUILD  willow_encoder_factory.h  willow_explicit_encoder.cc  willow_explicit_encoder.h  willow_explicit_encoder_test.cc
willow/src/shell/: BUILD  ahe.rs  kahe.rs  parameters.rs  parameters_generation.rs  single_thread_hkdf.rs  vahe.rs
willow/src/testing_utils/: BUILD  shell_testing_parameters.rs  testing_utils.rs
willow/src/traits/: BUILD  ahe.rs  client.rs  decryptor.rs  kahe.rs  messages.rs  server.rs  vahe.rs  verifier.rs
willow/src/willow_v1/: BUILD  client.rs  common.rs  decryptor.rs  server.rs  verifier.rs
willow/src/zk/: rlwe_relation.rs
willow/tests/: BUILD  willow_v1_shell.rs
