"Secure Aggregation"

module(
    name = "secure_aggregation",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.1")
archive_override(
    # Patches protobuf to make the Rust libraries visible. See
    # https://github.com/protocolbuffers/protobuf/issues/23866.
    module_name = "protobuf",
    integrity = "sha256-F4n12LZfTcM249HtTdCAw3iK35iU7Ei61GTtjK3cS4Y=",
    strip_prefix = "protobuf-9151e03956a34b795ca0d58e19d8a9991904b459",
    urls = ["https://github.com/google/protobuf/archive/9151e03956a34b795ca0d58e19d8a9991904b459.zip"],
)

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.1")
bazel_dep(name = "tink_cc", version = "2.4.0")
bazel_dep(name = "shell-encryption", version = "0.0.0")
archive_override(
    module_name = "shell-encryption",
    integrity = "sha256-fR28P87WkRNGlF38tO/cMz9mrt6g/+LF8jhK4eeAows=",
    strip_prefix = "shell-encryption-8607279e72f79efc51077f2b4f982a6a6296774e",
    urls = [
        "https://github.com/google/shell-encryption/archive/8607279e72f79efc51077f2b4f982a6a6296774e.zip",
    ],
)

bazel_dep(name = "cxx.rs", version = "1.0.186")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    features = [
        "alloc",
        "default",
        "getrandom",
        "libc",
        "small_rng",
        "std",
        "std_rng",
    ],
    package = "rand",
    version = "0.8.5",
)
crate.spec(
    features = [
        "anyhow",
    ],
    package = "googletest",
    version = "0.14.2",
)
crate.spec(
    features = [
        "alloc",
        "group",
        "digest",
        "precomputed-tables",
        "rand_core",
        "zeroize",
        "serde",
    ],
    package = "curve25519-dalek",
    version = "4.1.3",
)
crate.spec(
    features = [
        "color",
        "default",
        "derive",
        "env",
        "error-context",
        "help",
        "std",
        "string",
        "suggestions",
        "unstable-ext",
        "usage",
        "wrap_help",
    ],
    package = "clap",
    version = "4.5.38",
)
crate.spec(
    features = [],
    package = "thiserror",
    version = "1.0.69",
)
crate.spec(
    features = [
        "default",
        "std",
    ],
    package = "merlin",
    version = "3.0.0",
)
crate.spec(
    features = [
        "default",
        "std",
    ],
    package = "sha3",
    version = "0.10.8",
)
crate.from_specs()
use_repo(crate, crate_index = "crates")
